Fix height of pages on mobile and tablet

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -649,7 +649,7 @@ hr {
   background-color: #f2f2f2;
   border: 1px solid #262626;
   flex: 1 1 100%;
-  height: 98vh;
+  height: 750px;
   margin-bottom: 1vh;
   margin-top: 1vh;
   overflow-x: hidden;
@@ -658,6 +658,7 @@ hr {
   @media screen and (min-width: 768px) {
     .page {
       flex: 1 1 50%;
+      height: 820px;
       padding: 0.8rem; } }
   @media screen and (min-width: 1024px) {
     .page {
