--- a/stylesheets/utilities/_page.scss
+++ b/stylesheets/utilities/_page.scss
@@ -2,7 +2,7 @@
   background-color: $page-color--base;
   border: $border;
   flex: 1 1 100%;
-  height: 98vh;
+  height: 750px;
   margin-bottom: 1vh;
   margin-top: 1vh;
   overflow-x: hidden;
@@ -11,6 +11,7 @@
 
   @include breakpoint(medium_up) {
     flex: 1 1 50%;
+    height: 820px;
     padding: $space--base;
   }
 
